@@ -9,7 +9,16 @@ PyGTK is included in <strong>most Linux distributions</strong>
 <strong>source code</strong> can also be downloaded and compiled from
 the links below.
 
-<h3>Current stable version (GTK+ 2.8.x)</h3>
+<h3>Current stable version (GTK+ 2.10.x)</h3>
+
+<p>The latest version of PyGTK for GTK+ 2.10.x
+is available from the following website:</p>
+
+<ul>
+  <li><a href="http://ftp.gnome.org/pub/GNOME/sources/pygtk/2.10/">http://ftp.gnome.org/pub/GNOME/sources/pygtk/2.10/</a></li>
+</ul>
+
+<h3>Old stable version (GTK+ 2.8.x)</h3>
 
 <p>The latest version of PyGTK for GTK+ 2.8.x
 is available from the following website:</p>
@@ -17,6 +26,7 @@ is available from the following website:</p>
 <ul>
   <li><a href="http://ftp.gnome.org/pub/GNOME/sources/pygtk/2.8/">http://ftp.gnome.org/pub/GNOME/sources/pygtk/2.8/</a></li>
 </ul>
+<p>
 
 <h3>GNOME bindings (gnome-python, gnome-python-desktop
     and gnome-python-extras)</h3>
@@ -33,7 +43,13 @@ They are available from the Gnome FTP site and its mirrors:</p>
   <li><a href="http://ftp.gnome.org/pub/GNOME/sources/gnome-python-extras/">http://ftp.gnome.org/pub/GNOME/sources/gnome-python-extras/</a></li>
 </ul>
 
-<h3>Windows (Win32) Port</h3>
+<h3>Win32 Installer</h3>
+
+<ul>
+  <li><a href="http://ftp.gnome.org/pub/GNOME/binaries/win32/pycairo/1.2/">PyCairo (1.2)</a></li>
+  <li><a href="http://ftp.gnome.org/pub/GNOME/binaries/win32/pygobject/2.12/">PyGObject (2.12)</a></li>
+  <li><a href="http://ftp.gnome.org/pub/GNOME/binaries/win32/pygtk/2.10/">PyGTK (2.10)</a></li>
+</ul>
 
 <p>The Win32 port of PyGTK is maintained by <strong>Cedric
 Gustin</strong>; he maintains a <a
